# forge-observability

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
containers/forge-observability-api/: Containerfile
containers/forge-observability-worker/: Containerfile
devtools/: README.md  compose.clickhouse.yml  compose.dev.yml  compose.grafana.yml
devtools/grafana/: README.md  compose.grafana.yml
devtools/grafana/dashboards/: forge-business.json  forge-engineering.json  forge-issue-detail.json
devtools/grafana/provisioning/dashboards/: dashboards.yml
devtools/grafana/provisioning/datasources/: clickhouse.yml  prometheus.yml  redis.yml
devtools/langfuse/: seed.py
devtools/prometheus/: seed.py
devtools/provisioning/dashboards/: dashboards.yml  llm-cost.json  llm-performance.json  llm-scores.json  llm-token-breakdown.json
devtools/provisioning/datasources/: langfuse.yml
devtools/redis/: seed.py
docs/: analytics-architecture.md  observability-design-decisions.md
docs/superpowers/plans/: 2026-05-13-grafana-langfuse-datasource.md
docs/superpowers/specs/: 2026-05-13-grafana-langfuse-datasource-design.md
proposals/: README.md
src/forge/observability/: cli.py  config.py
src/forge/observability/api/: app.py
src/forge/observability/pipelines/: github_pipeline.py  jira_pipeline.py  (+2 more)
state/.dbt/: profiles.yml
tests/: test_api.py  test_cli.py  test_config.py  test_pipelines.py  test_worker.py
tests/devtools/langfuse/: test_seed.py
tests/devtools/prometheus/: test_seed.py
tests/devtools/redis/: test_seed.py
(+21 files in other folders)
