[project]
name = "forge-observability"
version = "0.1.0"
description = "Observability tooling for the forge SDLC platform"
requires-python = ">=3.11"
dependencies = [
    "langfuse>=2.50.0",
    "faker>=20.0.0",
    "python-dotenv>=1.0.0",
    "clickhouse-driver>=0.2.7",
    "prometheus-client>=0.21.0",
    "python-snappy>=0.7.3",
    "redis>=5.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
